styles.css
body {
  font-family: 'Satoshi', sans-serif;
}

.font-clash {
  font-family: 'Clash Display', sans-serif;
  font-weight: inherit;
}

.nav-link {
  position: relative;
  padding-left: 1rem;
  color: inherit;
  transition: color 0.3s ease;
}

.nav-link:hover {
  color: #00FF66; /* Highlight color on hover */
}

.nav-link.active::before {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  transform: translateY(-50%);
  width: 6px;
  height: 6px;
  border-radius: 9999px;
  background-color: #00FF66; /* Highlight color for the active dot */
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee {
  animation: marquee 40s linear infinite;
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee-1 {
  animation: marquee 40s linear infinite;
}

.bg-grid {
    background-image:
      linear-gradient(to right, rgba(0, 0, 0, 0.05) 1px, transparent 1px),
      linear-gradient(to bottom, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
    background-size: 40px 40px;
    background-position: center;
  }

  .dark .bg-grid {
    background-image:
      linear-gradient(to right, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
      linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
  }

html {
  scroll-behavior: smooth;
}

#stickyNav[data-aos] {
    transform: translateX(-50%) !important;
}

